--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -61,7 +61,7 @@ footer {
   border-top: 1px solid lightgrey;
 }
 
-.notification {
+.error {
   position: absolute;
   top: 0;
   left: 0;
@@ -73,26 +73,32 @@ footer {
   align-items: center;
 }
 
-.notification > .error {
+.error > h1 {
   color: red;
   font-size: 12px;
   font-weight: bold;
 }
 
-.success {
+.notification {
   display: flex;
   flex-direction: column;
   justify-items: center;
   align-items: center;
 }
 
-.success > h1 {
+.notification .success {
   color: green;
   font-size: 16px;
   font-weight: bold;
 }
 
-.success > .button {
+.notification .error-page {
+  color: red;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.notification > .button {
   text-decoration: none;
   color: white;
   background-color: rgb(29, 128, 210);
